*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.1 ===
* Implemented Steereo Split mode for stereo versions of plugin.

=== 1.0.0 ===
* Initial release.
