@@ -4,6 +4,7 @@
 
 === 1.0.1 ===
 * Implemented Steereo Split mode for stereo versions of plugin.
+* Surge protection is now gloal, not local for each band.
 
 === 1.0.0 ===
 * Initial release.
